force-app/main/default/objects/Field_referencing__mdt/Field_referencing__mdt.object-meta.xml
<CustomObject>
    <label>Field referencing</label>
    <pluralLabel>Field referencings</pluralLabel>
</CustomObject>