force-app/main/default/objects/Field_referencing__mdt/fields/Related_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Field__c</fullName>
    <label>Related Field</label>
    <metadataRelationshipControllingField>Field_referencing__mdt.Related_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Field_referencings</relationshipLabel>
    <relationshipName>Field_referencings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>