force-app/main/default/objects/Field_referencing__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Field_referencings</relationshipLabel>
    <relationshipName>Field_referencings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>