force-app/main/default/objects/Field_referencing__mdt/fields/second_field__c.field-meta.xml
<CustomField>
    <fullName>second_field__c</fullName>
    <label>second field</label>
    <metadataRelationshipControllingField>Field_referencing__mdt.Related_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Field_referencings1</relationshipLabel>
    <relationshipName>Field_referencings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>